--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,13 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
+
+jobs:
+- deployment: VMDeploy
+  displayName: Deploy to VM
+  environment: 
+    name: VMenv
 
 steps:
 - task: Maven@3
