Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,12 +8,8 @@ trigger:
 
 pool:
   vmImage: windows-latest
-
-jobs:
-- deployment: VMDeploy
-  displayName: Deploy to VM
   environment: 
-    name: VMenv
+    name: myenv
 
 - task: Maven@3
   inputs:
